--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5382,6 +5382,7 @@ payload:
   - '+.5u3d.com'
   - '+.5u588.com'
   - '+.5u5u5u5u.com'
+  - '+.5uar.com'
   - '+.5ugaizhuang.com'
   - '+.5uks.com'
   - '+.5upm.com'
@@ -5413,7 +5414,6 @@ payload:
   - '+.5yhua.org'
   - '+.5yi.com'
   - '+.5ykj.com'
-  - '+.5you.com'
   - '+.5youchou.com'
   - '+.5yun.org'
   - '+.5zai.com'
@@ -9078,7 +9078,6 @@ payload:
   - '+.anlu114.com'
   - '+.anmobc.com'
   - '+.anmoxiansheng.com'
-  - '+.anmoyi98.com'
   - '+.ann9.com'
   - '+.annangela.moe'
   - '+.annchain.io'
@@ -10172,7 +10171,6 @@ payload:
   - '+.baiduyunpan.net'
   - '+.baiduyunsousou.com'
   - '+.baiduyy.com'
-  - '+.baiduzhidao.site'
   - '+.baiduzjn.com'
   - '+.baieryk.com'
   - '+.baietu.com'
@@ -10450,7 +10448,6 @@ payload:
   - '+.baobao88.com'
   - '+.baobaobang.com'
   - '+.baobaoshu.com'
-  - '+.baobaotd.com'
   - '+.baobei360.com'
   - '+.baobeicang.com'
   - '+.baobeigezi.com'
@@ -10606,7 +10603,6 @@ payload:
   - '+.bayinfu.com'
   - '+.bayinh.com'
   - '+.bayinmao.com'
-  - '+.baytaku.com'
   - '+.bayuegua.com'
   - '+.bayueju.com'
   - '+.bayueweb.com'
@@ -12429,7 +12425,6 @@ payload:
   - '+.bthss.com'
   - '+.bthuifu.com'
   - '+.btime.com'
-  - '+.btiyu.com'
   - '+.btmao.cc'
   - '+.btmayi.cc'
   - '+.btmeiju.com'
@@ -13884,7 +13879,6 @@ payload:
   - '+.cfiec.net'
   - '+.cfiecdns.net'
   - '+.cfimg.com'
-  - '+.cfkq.net'
   - '+.cflm.com'
   - '+.cfm119.com'
   - '+.cfmcc.com'
@@ -19957,7 +19951,6 @@ payload:
   - '+.downos.com'
   - '+.downpp.com'
   - '+.downsave.com'
-  - '+.downuc.com'
   - '+.downun.com'
   - '+.downv.com'
   - '+.downxia.com'
@@ -22369,6 +22362,7 @@ payload:
   - '+.fastcdn.com'
   - '+.fastcname.com'
   - '+.fastdo.cc'
+  - '+.fastgit.org'
   - '+.fastgz.com'
   - '+.fastidea.cc'
   - '+.fastidea.me'
@@ -23166,7 +23160,6 @@ payload:
   - '+.focussend.com'
   - '+.fodang.org'
   - '+.fodian.net'
-  - '+.fodizi.com'
   - '+.fodizi.net'
   - '+.fodlab.com'
   - '+.fodoco.com'
@@ -25511,7 +25504,6 @@ payload:
   - '+.gugeapps.net'
   - '+.gugexs.com'
   - '+.gugong.net'
-  - '+.gugooe.com'
   - '+.gugu5.com'
   - '+.gugud.com'
   - '+.guguread.com'
@@ -26945,7 +26937,6 @@ payload:
   - '+.hbsccloud.com'
   - '+.hbsdenterprise.com'
   - '+.hbsem.com'
-  - '+.hbseo.com'
   - '+.hbsfgk.org'
   - '+.hbshbsh.com'
   - '+.hbshengbangwl.com'
@@ -29907,6 +29898,7 @@ payload:
   - '+.icaifu.com'
   - '+.icaile.com'
   - '+.ican-contest.org'
+  - '+.ican365.net'
   - '+.icandata.com'
   - '+.icangshu111.com'
   - '+.icanzc.com'
@@ -30971,6 +30963,7 @@ payload:
   - '+.innjia.com'
   - '+.innlym.me'
   - '+.innocomn.com'
+  - '+.innodealing.com'
   - '+.innojoy.com'
   - '+.innotechx.com'
   - '+.innotron.com'
@@ -31685,7 +31678,6 @@ payload:
   - '+.iweek.ly'
   - '+.iweekapi.com'
   - '+.iweidu.net'
-  - '+.iweishow.com'
   - '+.iweizhijia.com'
   - '+.iweju.com'
   - '+.iwellen.com'
@@ -35030,7 +35022,6 @@ payload:
   - '+.kit-lee.me'
   - '+.kiteshow.com'
   - '+.kitstown.com'
-  - '+.kittyyoo.com'
   - '+.kiujq.com'
   - '+.kiwa-tech.com'
   - '+.kiwenlau.com'
@@ -36960,7 +36951,6 @@ payload:
   - '+.light3moon.com'
   - '+.lightalk.com'
   - '+.lightcss.com'
-  - '+.lightfire.cc'
   - '+.lightgx.com'
   - '+.lightingchina.com'
   - '+.lightinit.com'
@@ -39384,7 +39374,6 @@ payload:
   - '+.meirenshang.com'
   - '+.meiridazhe.com'
   - '+.meirids.com'
-  - '+.meirishangxin.com'
   - '+.meirishentie.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
@@ -40052,7 +40041,6 @@ payload:
   - '+.mite5.com'
   - '+.miteno.com'
   - '+.miteo.net'
-  - '+.mitilove.com'
   - '+.mitiplus.com'
   - '+.mittrchina.com'
   - '+.miui.com'
@@ -46533,6 +46521,7 @@ payload:
   - '+.readm.tech'
   - '+.readmeok.com'
   - '+.readmorejoy.com'
+  - '+.readnos.com'
   - '+.readnovel.com'
   - '+.readpaper.com'
   - '+.readpaul.com'
@@ -47338,7 +47327,6 @@ payload:
   - '+.s575.com'
   - '+.s5tx.com'
   - '+.s60sky.com'
-  - '+.s6qq.com'
   - '+.s72c.com'
   - '+.s8dj.com'
   - '+.s8j.com'
@@ -49095,7 +49083,6 @@ payload:
   - '+.shrcdy.com'
   - '+.shrenq.com'
   - '+.shrenqi.com'
-  - '+.shrinkablesleeve.com'
   - '+.shrobotpark.com'
   - '+.shsaic.net'
   - '+.shsbnu.net'
@@ -50452,6 +50439,7 @@ payload:
   - '+.source3g.com'
   - '+.sourcecodecap.com'
   - '+.sourcedev.cc'
+  - '+.sourl.co'
   - '+.sousea.com'
   - '+.soushai.com'
   - '+.soushuking.com'
@@ -50595,7 +50583,6 @@ payload:
   - '+.springcloud.cc'
   - '+.springcocoon.com'
   - '+.springtour.com'
-  - '+.spriteapp.com'
   - '+.sprzny.com'
   - '+.spswc.com'
   - '+.sptcc.com'
@@ -51639,7 +51626,6 @@ payload:
   - '+.szfg.net'
   - '+.szflysky.com'
   - '+.szfob.cc'
-  - '+.szfuit.com'
   - '+.szfw.org'
   - '+.szfwzl.com'
   - '+.szfyhd.com'
@@ -54754,6 +54740,7 @@ payload:
   - '+.unibizp.com'
   - '+.unicde.com'
   - '+.unicloud.com'
+  - '+.unicom-cz.com'
   - '+.unicomjnwy.com'
   - '+.unicomlife.com'
   - '+.unicompayment.com'
@@ -55580,6 +55567,7 @@ payload:
   - '+.vkvr.net'
   - '+.vlabstatic.com'
   - '+.vlan9.com'
+  - '+.vland-official.com'
   - '+.vlandgroup.com'
   - '+.vlcms.com'
   - '+.vldbd.com'
@@ -56077,7 +56065,6 @@ payload:
   - '+.wanglibao.com'
   - '+.wanglids.com'
   - '+.wanglu.info'
-  - '+.wangluojianshen.com'
   - '+.wangluoliuxing.com'
   - '+.wanglutech.com'
   - '+.wanglv.com'
@@ -58243,7 +58230,6 @@ payload:
   - '+.wuchenxu.com'
   - '+.wuda-website.com'
   - '+.wudage.com'
-  - '+.wudang.cc'
   - '+.wudangquan.net'
   - '+.wudangshan.com'
   - '+.wudao.com'
@@ -58447,6 +58433,7 @@ payload:
   - '+.wvshare.com'
   - '+.ww2bbs.net'
   - '+.wwc-blog.com'
+  - '+.wwdz13.com'
   - '+.wwe008.com'
   - '+.wwenglish.com'
   - '+.wwenglish.org'
@@ -58782,6 +58769,7 @@ payload:
   - '+.xarxrljt.com'
   - '+.xaseastar.com'
   - '+.xasff.com'
+  - '+.xasgxy.com'
   - '+.xashangwang.com'
   - '+.xasimonds.com'
   - '+.xasixiongdi.com'
@@ -59837,7 +59825,6 @@ payload:
   - '+.xincheping.com'
   - '+.xinchukj.com'
   - '+.xincmm.com'
-  - '+.xinda22.com'
   - '+.xindaifu.com'
   - '+.xindemarinenews.com'
   - '+.xindexuexi.com'
@@ -62023,7 +62010,6 @@ payload:
   - '+.yichemall.com'
   - '+.yichesafe.com'
   - '+.yichuyifan.com'
-  - '+.yicipapa.com'
   - '+.yiclear.com'
   - '+.yicongfound.org'
   - '+.yicuba.com'
@@ -62477,7 +62463,6 @@ payload:
   - '+.yiwaiart.com'
   - '+.yiwan.com'
   - '+.yiwanggo.net'
-  - '+.yiwangml.com'
   - '+.yiwanzhushou.com'
   - '+.yiwealth.com'
   - '+.yiweb.com'
