--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3451,6 +3451,7 @@ payload:
   - '+.3haow.com'
   - '+.3hbox.com'
   - '+.3hgui.com'
+  - '+.3incloud.com'
   - '+.3j4.com'
   - '+.3jdh.com'
   - '+.3jidi.com'
@@ -9867,7 +9868,6 @@ payload:
   - '+.avnpc.com'
   - '+.avoscloud.com'
   - '+.avq360.com'
-  - '+.avqrw.com'
   - '+.avrvi.com'
   - '+.avrw.com'
   - '+.avtechcn.com'
@@ -12118,7 +12118,6 @@ payload:
   - '+.boluo.com'
   - '+.boluo.link'
   - '+.boluo.org'
-  - '+.boluo1122.com'
   - '+.boluogouwu.com'
   - '+.boluomee.com'
   - '+.boluomeet.com'
@@ -12954,6 +12953,7 @@ payload:
   - '+.caispace.com'
   - '+.caistv.com'
   - '+.cait.com'
+  - '+.caitlinbeverly.com'
   - '+.caitun.com'
   - '+.caiu8.com'
   - '+.caiweiming.com'
@@ -13162,6 +13162,7 @@ payload:
   - '+.catguo.com'
   - '+.cathayagroup.com'
   - '+.cathayfund.com'
+  - '+.catherinebeverly.com'
   - '+.catjc.com'
   - '+.cato-travel.com'
   - '+.cattsoft.com'
@@ -14750,7 +14751,6 @@ payload:
   - '+.chinagb.net'
   - '+.chinagb.org'
   - '+.chinagba.com'
-  - '+.chinagcd.com'
   - '+.chinagcp.org'
   - '+.chinagdg.com'
   - '+.chinagiftsfair.com'
@@ -17171,8 +17171,6 @@ payload:
   - '+.crazyflasher.com'
   - '+.crazyphper.com'
   - '+.crazypm.com'
-  - '+.crbbav.com'
-  - '+.crbbpp.com'
   - '+.crbeverage.com'
   - '+.crc.com.hk'
   - '+.crc.hk'
@@ -19654,6 +19652,7 @@ payload:
   - '+.doido.com'
   - '+.doit.am'
   - '+.doitim.com'
+  - '+.doiua.com'
   - '+.doki8.com'
   - '+.doko.com'
   - '+.dolanzz.com'
@@ -21405,7 +21404,6 @@ payload:
   - '+.enappstore.com'
   - '+.enbowang.com'
   - '+.enbrands.com'
-  - '+.enci-world.com'
   - '+.enec.net'
   - '+.enelcn.com'
   - '+.enen6.com'
@@ -22764,6 +22762,7 @@ payload:
   - '+.fghi34.com'
   - '+.fgidna.com'
   - '+.fgkj.cc'
+  - '+.fgo-teamup.com'
   - '+.fgo.wiki'
   - '+.fgowiki.com'
   - '+.fgvisa.net'
@@ -29611,6 +29610,7 @@ payload:
   - '+.hzsgjj.com'
   - '+.hzshudian.com'
   - '+.hzstad88.com'
+  - '+.hzsxn.com'
   - '+.hzti.com'
   - '+.hztosz.com'
   - '+.hztraining.com'
@@ -33113,6 +33113,7 @@ payload:
   - '+.jjapk.com'
   - '+.jjb-static.com'
   - '+.jjbang.com'
+  - '+.jjbangbang.com'
   - '+.jjbank.net'
   - '+.jjbbs.com'
   - '+.jjbhn.com'
@@ -38029,6 +38030,7 @@ payload:
   - '+.lty.fun'
   - '+.ltzsjt.com'
   - '+.lu.com'
+  - '+.lu18.com'
   - '+.lu35.com'
   - '+.lu4n.com'
   - '+.lua.ren'
@@ -44917,6 +44919,7 @@ payload:
   - '+.qhdgjj.com'
   - '+.qhdjcbj.com'
   - '+.qhdnews.com'
+  - '+.qhdok.com'
   - '+.qhdren.com'
   - '+.qhdymdc.com'
   - '+.qhea.com'
@@ -48349,6 +48352,7 @@ payload:
   - '+.shangshi360.com'
   - '+.shangshici.com'
   - '+.shangshu.cc'
+  - '+.shangshuyixue.com'
   - '+.shangtao.net'
   - '+.shangtao360.com'
   - '+.shangtianapp.com'
@@ -54300,6 +54304,7 @@ payload:
   - '+.tz1288.com'
   - '+.tz1980.com'
   - '+.tz8.com'
+  - '+.tz887.com'
   - '+.tz911.com'
   - '+.tzbank.com'
   - '+.tzbank.net'
@@ -63266,6 +63271,7 @@ payload:
   - '+.ys168.com'
   - '+.ys1688.cc'
   - '+.ys2345.com'
+  - '+.ys4fun.com'
   - '+.ys666888.com'
   - '+.ys7.com'
   - '+.ys720.com'
@@ -64350,7 +64356,6 @@ payload:
   - '+.zbai.net'
   - '+.zbapk.com'
   - '+.zbbar.net'
-  - '+.zbcrw.com'
   - '+.zbfilm.com'
   - '+.zbfjsj.com'
   - '+.zbgedu.com'
@@ -66588,6 +66593,7 @@ payload:
   - '+.ztww.net'
   - '+.ztxz.cc'
   - '+.ztzy.com'
+  - '+.zu1k.com'
   - '+.zuan-cheng.com'
   - '+.zuanbi8.com'
   - '+.zuanchuang.org'
@@ -66637,6 +66643,7 @@ payload:
   - '+.zuiidea.com'
   - '+.zuijiao.net'
   - '+.zuijunshi.com'
+  - '+.zuik.ren'
   - '+.zuikc.com'
   - '+.zuiku.com'
   - '+.zuikzy.com'
