--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2619,6 +2619,7 @@ payload:
   - '+.2lieqi.com'
   - '+.2loveyou.com'
   - '+.2m2j.com'
+  - '+.2ma2.com'
   - '+.2mjob.com'
   - '+.2mould.com'
   - '+.2or3m.com'
@@ -5648,6 +5649,7 @@ payload:
   - '+.6711.com'
   - '+.6711img.com'
   - '+.676.com'
+  - '+.676711.net'
   - '+.676z.com'
   - '+.6787.com'
   - '+.67876.com'
@@ -6011,6 +6013,7 @@ payload:
   - '+.77745.com'
   - '+.777524.com'
   - '+.7775367.com'
+  - '+.777biubiu.com'
   - '+.777lala.com'
   - '+.777moban.com'
   - '+.777n.com'
@@ -11147,6 +11150,7 @@ payload:
   - '+.bianzhirensheng.com'
   - '+.biao12.com'
   - '+.biaodan.info'
+  - '+.biaodiancloud.com'
   - '+.biaodianfu.com'
   - '+.biaoge.com'
   - '+.biaoge.me'
@@ -14262,6 +14266,7 @@ payload:
   - '+.chenanz.com'
   - '+.chenapp.com'
   - '+.chende.net'
+  - '+.chenfan.info'
   - '+.cheng-nuo.com'
   - '+.cheng-sen.com'
   - '+.cheng95.com'
@@ -18523,7 +18528,6 @@ payload:
   - '+.ddosimg7bfqw5tk3z2cvisjge.com'
   - '+.ddoswafcdn.xyz'
   - '+.ddove.com'
-  - '+.ddpa.com'
   - '+.ddpai.com'
   - '+.ddport.com'
   - '+.ddqcw.com'
@@ -23851,6 +23855,7 @@ payload:
   - '+.gamefk.com'
   - '+.gamefm.com'
   - '+.gamefv.com'
+  - '+.gamehome.tv'
   - '+.gamehui.com'
   - '+.gameinns.com'
   - '+.gameiy.com'
@@ -26981,7 +26986,6 @@ payload:
   - '+.hc79.com'
   - '+.hc9.com'
   - '+.hcbbs.com'
-  - '+.hcbus.com'
   - '+.hcbuy.com'
   - '+.hcc11.com'
   - '+.hccpcba.com'
@@ -31470,6 +31474,7 @@ payload:
   - '+.itkoudai.com'
   - '+.itlu.org'
   - '+.itluantan.com'
+  - '+.itmamba.net'
   - '+.itmanbu.com'
   - '+.itmind.net'
   - '+.itmo.com'
@@ -35857,7 +35862,6 @@ payload:
   - '+.laima-tech.com'
   - '+.laimaidi.com'
   - '+.laimaika.net'
-  - '+.laipai8.com'
   - '+.laiqi.net'
   - '+.laiqukankan.com'
   - '+.laird-tek.com'
@@ -35964,6 +35968,7 @@ payload:
   - '+.langren8.com'
   - '+.langrencard.com'
   - '+.langrenclub.com'
+  - '+.langrensha.net'
   - '+.langtaojin.com'
   - '+.langtze.com'
   - '+.languangdy.com'
@@ -38325,6 +38330,7 @@ payload:
   - '+.lxdns.org'
   - '+.lxf.me'
   - '+.lxi.me'
+  - '+.lxiaoxin.com'
   - '+.lxin007.com'
   - '+.lxjep.com'
   - '+.lxjk999.com'
@@ -38386,6 +38392,7 @@ payload:
   - '+.lyhero.com'
   - '+.lyhuadu.com'
   - '+.lyjiayi.com'
+  - '+.lyjunshi.com'
   - '+.lyjxwl.com'
   - '+.lylddz2021.com'
   - '+.lylryy.com'
@@ -39545,6 +39552,7 @@ payload:
   - '+.mg67.com'
   - '+.mgc-games.com'
   - '+.mgd5.com'
+  - '+.mgdzz.com'
   - '+.mgenware.com'
   - '+.mgff.com'
   - '+.mgl9.com'
@@ -41362,7 +41370,6 @@ payload:
   - '+.nbmai.com'
   - '+.nbmao.com'
   - '+.nbmedicalsystem.com'
-  - '+.nbow.net'
   - '+.nboxnas.com'
   - '+.nbpolytheatre.com'
   - '+.nbrj.com'
@@ -45431,6 +45438,7 @@ payload:
   - '+.qiushibaike.com'
   - '+.qiushibang.com'
   - '+.qiushile.com'
+  - '+.qiushiwl.com'
   - '+.qiushu.cc'
   - '+.qiushuge.net'
   - '+.qiushuzw.com'
@@ -50525,7 +50533,6 @@ payload:
   - '+.sptccn.com'
   - '+.spthome.com'
   - '+.sptxm.com'
-  - '+.spush.com'
   - '+.spway.net'
   - '+.spyouxi.com'
   - '+.spzs.com'
@@ -50724,7 +50731,6 @@ payload:
   - '+.stbieshu.com'
   - '+.stboda.com'
   - '+.stc2002.com'
-  - '+.stcash.com'
   - '+.stcmcu.com'
   - '+.stcmcudata.com'
   - '+.stcn.com'
@@ -53911,6 +53917,7 @@ payload:
   - '+.tuiguangpingtai.com'
   - '+.tuijie.cc'
   - '+.tuikemima.com'
+  - '+.tuikemohe.com'
   - '+.tuili.com'
   - '+.tuili8.com'
   - '+.tuilidashi.xin'
@@ -54227,6 +54234,7 @@ payload:
   - '+.tycmbvb.com'
   - '+.tycqxs.com'
   - '+.tycredit.com'
+  - '+.tydouke.com'
   - '+.tyee8.com'
   - '+.tyfo.com'
   - '+.tyhjzx.com'
@@ -55234,7 +55242,6 @@ payload:
   - '+.versaloon.com'
   - '+.vertuonline.com'
   - '+.ververica.com'
-  - '+.very9s.net'
   - '+.veryapex.com'
   - '+.verybeaut.com'
   - '+.verycaca.com'
@@ -61265,6 +61272,7 @@ payload:
   - '+.yafco.com'
   - '+.yafdev.com'
   - '+.yafeilinux.com'
+  - '+.yagaooem.xyz'
   - '+.yageo.tech'
   - '+.yago-mall.com'
   - '+.yahacode.com'
@@ -65349,6 +65357,7 @@ payload:
   - '+.zhmzjl.com'
   - '+.zhmzqi.com'
   - '+.zhnjw.com'
+  - '+.zhnxcw.com'
   - '+.zhobang.com'
   - '+.zhong.com'
   - '+.zhong100.com'
