--- a/directbak.yaml
+++ b/directbak.yaml
@@ -133,7 +133,6 @@ payload:
   - '+.020.net'
   - '+.0208.com'
   - '+.020banjia.net'
-  - '+.020h.com'
   - '+.020job.com'
   - '+.020ym.com'
   - '+.020zp.net'
@@ -694,6 +693,7 @@ payload:
   - '+.09ge.com'
   - '+.09rw.com'
   - '+.09shijue.com'
+  - '+.0a.fit'
   - '+.0bug.org'
   - '+.0car0.com'
   - '+.0ctrl.com'
@@ -1108,6 +1108,7 @@ payload:
   - '+.1213.me'
   - '+.121314.com'
   - '+.121ask.com'
+  - '+.121down.com'
   - '+.121mai0098.com'
   - '+.121mu.com'
   - '+.121xia.com'
@@ -2996,7 +2997,6 @@ payload:
   - '+.360chezhan.com'
   - '+.360cloudwaf.com'
   - '+.360daikuan.com'
-  - '+.360dao.com'
   - '+.360ddj.com'
   - '+.360doc.com'
   - '+.360doc1.net'
@@ -3013,7 +3013,6 @@ payload:
   - '+.360drift.com'
   - '+.360drm.com'
   - '+.360edu.com'
-  - '+.360eet.com'
   - '+.360eol.com'
   - '+.360fdc.com'
   - '+.360gann.com'
@@ -5082,7 +5081,6 @@ payload:
   - '+.58dadi.com'
   - '+.58daojia.com'
   - '+.58display.com'
-  - '+.58dm.com'
   - '+.58fangdai.com'
   - '+.58fenlei.com'
   - '+.58food.com'
@@ -5696,6 +5694,7 @@ payload:
   - '+.68pk10.com'
   - '+.68play.com'
   - '+.68team.com'
+  - '+.68tuku.com'
   - '+.68web.net'
   - '+.68websoft.com'
   - '+.68youhui.com'
@@ -6278,7 +6277,6 @@ payload:
   - '+.800you.com'
   - '+.800youhuo.com'
   - '+.801167.com'
-  - '+.802013.com'
   - '+.802203.com'
   - '+.807.com'
   - '+.80710.com'
@@ -7733,6 +7731,7 @@ payload:
   - '+.abuyun.com'
   - '+.ac268.com'
   - '+.ac57.com'
+  - '+.academypublication.com'
   - '+.acadki.com'
   - '+.acc3.net'
   - '+.acc5.com'
@@ -8010,6 +8009,7 @@ payload:
   - '+.aesdrink.com'
   - '+.aesml.com'
   - '+.aesucai.com'
+  - '+.aet21.com'
   - '+.aevit.xyz'
   - '+.aexpec.com'
   - '+.af360.com'
@@ -8455,6 +8455,7 @@ payload:
   - '+.aiuxian.com'
   - '+.aiuxstudio.com'
   - '+.aiviy.com'
+  - '+.aiviysoft.com'
   - '+.aiwall.com'
   - '+.aiwan4399.com'
   - '+.aiwan91.com'
@@ -11435,6 +11436,7 @@ payload:
   - '+.biqusoso.com'
   - '+.biquter.xyz'
   - '+.biqutxt.com'
+  - '+.biquw.com'
   - '+.biquwo.com'
   - '+.biquwu.cc'
   - '+.biquwx.la'
@@ -12002,6 +12004,7 @@ payload:
   - '+.bmrtech.com'
   - '+.bmshow.com'
   - '+.bmtcled.com'
+  - '+.bmvps.com'
   - '+.bmw021.com'
   - '+.bmw143.com'
   - '+.bmw8033.com'
@@ -12105,6 +12108,7 @@ payload:
   - '+.bole.me'
   - '+.bolead.com'
   - '+.bolehu.net'
+  - '+.boleihg.com'
   - '+.bolejiang.com'
   - '+.bolelink.com'
   - '+.boll.me'
@@ -12947,7 +12951,6 @@ payload:
   - '+.caishenwang.online'
   - '+.caishimv.com'
   - '+.caishuixxi.com'
-  - '+.caispace.com'
   - '+.caistv.com'
   - '+.cait.com'
   - '+.caitlinbeverly.com'
@@ -16490,6 +16493,7 @@ payload:
   - '+.cntofu.com'
   - '+.cntopgear.com'
   - '+.cntoplead.com'
+  - '+.cntplus.com'
   - '+.cntrades.com'
   - '+.cntranslators.com'
   - '+.cntronics.com'
@@ -17115,6 +17119,7 @@ payload:
   - '+.cqsxedu.com'
   - '+.cqtally.co'
   - '+.cqtally.com'
+  - '+.cqtaotan.com'
   - '+.cqtea.com'
   - '+.cqtransit.com'
   - '+.cqtresearch.com'
@@ -17490,6 +17495,7 @@ payload:
   - '+.ctripgslb.com'
   - '+.ctripins.com'
   - '+.ctripqa.com'
+  - '+.ctrlqq.com'
   - '+.ctrmi.com'
   - '+.ctsbw.com'
   - '+.ctsec.com'
@@ -18557,6 +18563,7 @@ payload:
   - '+.ddztv.com'
   - '+.ddzuqin.com'
   - '+.de-moe.org'
+  - '+.de.net'
   - '+.de0.cc'
   - '+.de123.net'
   - '+.de1919.com'
@@ -18687,6 +18694,8 @@ payload:
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
   - '+.dengyong.cc'
+  - '+.denic.de'
+  - '+.denic.net'
   - '+.denocn.org'
   - '+.dentistshow.com'
   - '+.denuoexpo.com'
@@ -19538,6 +19547,7 @@ payload:
   - '+.dnsfwq.com'
   - '+.dnsgtm.com'
   - '+.dnsgulf.net'
+  - '+.dnsh6666.com'
   - '+.dnshot.net'
   - '+.dnshwx.com'
   - '+.dnsinside.net'
@@ -21311,6 +21321,7 @@ payload:
   - '+.elongshine.com'
   - '+.elongstatic.com'
   - '+.elpcon.com'
+  - '+.elpwc.com'
   - '+.els001.com'
   - '+.elsenow.com'
   - '+.elsiehoney.com'
@@ -21359,6 +21370,7 @@ payload:
   - '+.emeixs.com'
   - '+.emeor.com'
   - '+.emepu.com'
+  - '+.emilhk.com'
   - '+.emjob.com'
   - '+.emlinix.com'
   - '+.emlog.net'
@@ -21686,7 +21698,6 @@ payload:
   - '+.etiantian.com'
   - '+.etiantian.net'
   - '+.etiantian.org'
-  - '+.etiaoliao.com'
   - '+.etimeusa.com'
   - '+.etiv.me'
   - '+.etjournals.com'
@@ -21727,6 +21738,7 @@ payload:
   - '+.etuan.com'
   - '+.etudu.com'
   - '+.etuonet.com'
+  - '+.etycx.com'
   - '+.etyy.com'
   - '+.etyyy.com'
   - '+.etz927.com'
@@ -21788,6 +21800,7 @@ payload:
   - '+.evilbinary.org'
   - '+.evilcos.me'
   - '+.evileyesaint.com'
+  - '+.evilwind.fun'
   - '+.evketang.com'
   - '+.evlo.us'
   - '+.evlook.com'
@@ -23100,6 +23113,7 @@ payload:
   - '+.fmpan.com'
   - '+.fmsh.com'
   - '+.fmtol.com'
+  - '+.fmtt6.xyz'
   - '+.fmwei.com'
   - '+.fmwhahaha.com'
   - '+.fmy90.com'
@@ -23701,7 +23715,6 @@ payload:
   - '+.fz222.com'
   - '+.fz2sc.com'
   - '+.fz597.com'
-  - '+.fzbm.com'
   - '+.fzbtv.com'
   - '+.fzccpit.org'
   - '+.fzcyjh.com'
@@ -24401,7 +24414,6 @@ payload:
   - '+.gexing.com'
   - '+.gexing.me'
   - '+.gexings.com'
-  - '+.gexingshuo.com'
   - '+.gexingzipai.com'
   - '+.geyan123.com'
   - '+.geyanw.com'
@@ -24589,6 +24601,7 @@ payload:
   - '+.gitee.com'
   - '+.gitee.io'
   - '+.githang.com'
+  - '+.github.do'
   - '+.githubusercontents.com'
   - '+.gitissue.com'
   - '+.gitlib.com'
@@ -25122,6 +25135,7 @@ payload:
   - '+.gp891.com'
   - '+.gpai.net'
   - '+.gpautobid.com'
+  - '+.gpbctv.com'
   - '+.gpbeta.com'
   - '+.gpcqjy.com'
   - '+.gpcxw.com'
@@ -30136,6 +30150,7 @@ payload:
   - '+.idolyx.com'
   - '+.idom.me'
   - '+.idomb.com'
+  - '+.idong.ren'
   - '+.idongde.com'
   - '+.idongdong.com'
   - '+.idongniu.com'
@@ -32648,7 +32663,6 @@ payload:
   - '+.jimilier.com'
   - '+.jimiru-bj.com'
   - '+.jimistore.com'
-  - '+.jimmylv.info'
   - '+.jimonet.cc'
   - '+.jimu.com'
   - '+.jimubox.com'
@@ -32734,6 +32748,7 @@ payload:
   - '+.jinglawyer.com'
   - '+.jinglingbiaozhu.com'
   - '+.jinglong0769.com'
+  - '+.jinglongyu.link'
   - '+.jingmaoyuanxin.com'
   - '+.jingme.net'
   - '+.jingmeiti.com'
@@ -35109,6 +35124,7 @@ payload:
   - '+.kmapp.net'
   - '+.kmcaishui.com'
   - '+.kmcenter.org'
+  - '+.kmcha.com'
   - '+.kmcits.com'
   - '+.kmcits0655.com'
   - '+.kmcxedu.com'
@@ -35708,6 +35724,7 @@ payload:
   - '+.kwin.xyz'
   - '+.kwkf.com'
   - '+.kwtzn.com'
+  - '+.kwudor.com'
   - '+.kwx.gd'
   - '+.kwxjh.net'
   - '+.kx001.com'
@@ -36859,7 +36876,6 @@ payload:
   - '+.liehu.tv'
   - '+.liehunwang.com'
   - '+.liehuo.net'
-  - '+.liehuo.org'
   - '+.liejin99.com'
   - '+.lieju.com'
   - '+.lielb.com'
@@ -36996,6 +37012,7 @@ payload:
   - '+.linewow.com'
   - '+.linezing.com'
   - '+.linfan.com'
+  - '+.linfeicloud.com'
   - '+.lingaoren.com'
   - '+.lingb.net'
   - '+.lingbao-e.com'
@@ -37977,6 +37994,7 @@ payload:
   - '+.lspjy.com'
   - '+.lsq6.com'
   - '+.lsqifu.com'
+  - '+.lsqpay.com'
   - '+.lssen.com'
   - '+.lssggzy.com'
   - '+.lstazl.com'
@@ -38643,7 +38661,6 @@ payload:
   - '+.maijiabashi.com'
   - '+.maijiakan.com'
   - '+.maijichuang.net'
-  - '+.maijx.com'
   - '+.maikenu.com'
   - '+.mail-qq.com'
   - '+.mail163.com'
@@ -38936,6 +38953,7 @@ payload:
   - '+.markonreview.com'
   - '+.markorchem.com'
   - '+.marksmile.com'
+  - '+.marmot-cloud.com'
   - '+.maro6.com'
   - '+.maroon91.com'
   - '+.marry5.com'
@@ -40990,6 +41008,7 @@ payload:
   - '+.myhard.com'
   - '+.myhayo.com'
   - '+.myhexin.com'
+  - '+.myhithink.com'
   - '+.myhongzuan.com'
   - '+.myhostadmin.net'
   - '+.myhuahuo.com'
@@ -41735,6 +41754,7 @@ payload:
   - '+.nibaguai.com'
   - '+.nibaku.com'
   - '+.nibiye.com'
+  - '+.nic.de'
   - '+.nic.ren'
   - '+.nic.wang'
   - '+.nicaifu.com'
@@ -42572,6 +42592,7 @@ payload:
   - '+.okjike.com'
   - '+.okjk.co'
   - '+.okjoys.com'
+  - '+.okjx.cc'
   - '+.okki.com'
   - '+.okkkk.com'
   - '+.oklink.com'
@@ -43060,6 +43081,7 @@ payload:
   - '+.oushinet.com'
   - '+.oushivoyages.com'
   - '+.ousns.net'
+  - '+.outbrai.com'
   - '+.outlets365.com'
   - '+.ouvps.com'
   - '+.ouxutong.com'
@@ -44798,6 +44820,7 @@ payload:
   - '+.qdgxqrc.com'
   - '+.qdgxzg.com'
   - '+.qdhantang.com'
+  - '+.qdhmsoft.com'
   - '+.qdhsty.com'
   - '+.qdingnet.com'
   - '+.qdjiejie.com'
@@ -46339,6 +46362,7 @@ payload:
   - '+.rakinda-xm.com'
   - '+.ralf.ren'
   - '+.ramadaplaza-ovwh.com'
+  - '+.ramboplay.com'
   - '+.ramostear.com'
   - '+.ran-wen.com'
   - '+.ran10.com'
@@ -46535,7 +46559,6 @@ payload:
   - '+.redoop.com'
   - '+.redpact.com'
   - '+.redphon.com'
-  - '+.redquan.com'
   - '+.redream.com'
   - '+.redrock.team'
   - '+.redsh.com'
@@ -47750,7 +47773,6 @@ payload:
   - '+.sderp.com'
   - '+.sdewj.com'
   - '+.sdey.net'
-  - '+.sdfcp.com'
   - '+.sdfcxw.com'
   - '+.sdfhyl.com'
   - '+.sdfll.com'
@@ -49608,6 +49630,7 @@ payload:
   - '+.sique.com'
   - '+.sir3.com'
   - '+.sir66.com'
+  - '+.sirenvps.com'
   - '+.siryin.com'
   - '+.sisen.com'
   - '+.sishuok.com'
@@ -50877,6 +50900,7 @@ payload:
   - '+.suanya.com'
   - '+.suaooo.com'
   - '+.suapp.me'
+  - '+.subangjia.com'
   - '+.subaonet.com'
   - '+.subaotuan.com'
   - '+.subingkang.com'
@@ -52982,6 +53006,7 @@ payload:
   - '+.titanar.com'
   - '+.titanmatrix.com'
   - '+.titapark.com'
+  - '+.tiwb.com'
   - '+.tixa.com'
   - '+.tixaapp.com'
   - '+.tixaclub.net'
@@ -53417,6 +53442,7 @@ payload:
   - '+.toubang.tv'
   - '+.toucdn.com'
   - '+.touch4.me'
+  - '+.touchealth.com'
   - '+.touchev.com'
   - '+.touchpal.com'
   - '+.touchrom.com'
@@ -58149,7 +58175,6 @@ payload:
   - '+.wuaiso.com'
   - '+.wubaiyi.com'
   - '+.wubaiyi.net'
-  - '+.wubazx.online'
   - '+.wubiba.com'
   - '+.wubisheng.net'
   - '+.wubizi.net'
@@ -58893,6 +58918,7 @@ payload:
   - '+.xdnphb.com'
   - '+.xdocin.com'
   - '+.xdoor.cc'
+  - '+.xdow.net'
   - '+.xdplt.com'
   - '+.xdpvp.com'
   - '+.xdressy.com'
@@ -60311,6 +60337,7 @@ payload:
   - '+.xl5du.com'
   - '+.xl5dw.com'
   - '+.xl699.com'
+  - '+.xlb588.com'
   - '+.xlcidc.com'
   - '+.xlctyd.com'
   - '+.xlcz.com'
@@ -62613,6 +62640,7 @@ payload:
   - '+.ymatou.hk'
   - '+.ymbq301.com'
   - '+.ymcall.com'
+  - '+.ymcart.com'
   - '+.ymd520.net'
   - '+.ymd88.com'
   - '+.ymeme.com'
@@ -66070,6 +66098,7 @@ payload:
   - '+.zjqbj.com'
   - '+.zjqimeng.com'
   - '+.zjqk110.com'
+  - '+.zjqll.com'
   - '+.zjrc.com'
   - '+.zjrc.net'
   - '+.zjrcu.com'
