--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         cat chinadomain.txt > adguardtmp.txt
         cat appletmp.txt >> adguardtmp.txt
-        //cat googletmp.txt >> adguardtmp.txt
+        ## cat googletmp.txt >> adguardtmp.txt
         cat adguardtmp.txt | tr "\n" "/" | sed -e 's|^|/|' -e 's|\(.*\)|[\1]127.0.0.1:55555|' > accelerated-domains.china.adguardhome.conf
         echo "" >> accelerated-domains.china.adguardhome.conf
         echo "https://1.1.1.1/dns-query" >> accelerated-domains.china.adguardhome.conf
