--- a/directbak.yaml
+++ b/directbak.yaml
@@ -688,7 +688,6 @@ payload:
   - '+.0a.fit'
   - '+.0bug.org'
   - '+.0car0.com'
-  - '+.0ctrl.com'
   - '+.0d.work'
   - '+.0daily.com'
   - '+.0dayhack.net'
@@ -1585,6 +1584,7 @@ payload:
   - '+.178517.com'
   - '+.1787.ink'
   - '+.178800.cc'
+  - '+.178871.xyz'
   - '+.17888.com'
   - '+.178bird.com'
   - '+.178bit.com'
@@ -1899,7 +1899,6 @@ payload:
   - '+.1diaocha.com'
   - '+.1diary.me'
   - '+.1domedia.com'
-  - '+.1drj.com'
   - '+.1drv.ws'
   - '+.1dufish.com'
   - '+.1dume.com'
@@ -2715,7 +2714,6 @@ payload:
   - '+.315wangdai.com'
   - '+.315weishi.com'
   - '+.315z.net'
-  - '+.315zqgl.com'
   - '+.315zw.com'
   - '+.315zww.com'
   - '+.31609.com'
@@ -3785,7 +3783,6 @@ payload:
   - '+.4px.com'
   - '+.4pyun.com'
   - '+.4q5q.com'
-  - '+.4qx.net'
   - '+.4sjob.com'
   - '+.4sscrm.com'
   - '+.4thetooth.com'
@@ -7724,7 +7721,6 @@ payload:
   - '+.accyy.com'
   - '+.acde.net'
   - '+.ace-pow.com'
-  - '+.acechuang.com'
   - '+.acejoy.com'
   - '+.acelamicro.com'
   - '+.acesheep.com'
@@ -16906,7 +16902,6 @@ payload:
   - '+.cpdyj.com'
   - '+.cpecc.net'
   - '+.cpeol.net'
-  - '+.cpgzh.com'
   - '+.cphoto.net'
   - '+.cphoto.org'
   - '+.cpiano.com'
@@ -16945,6 +16940,7 @@ payload:
   - '+.cpsct.com'
   - '+.cpsenglish.com'
   - '+.cptae.com'
+  - '+.cpu114.com'
   - '+.cpu668.com'
   - '+.cpubbs.com'
   - '+.cpupack.com'
@@ -18771,7 +18767,6 @@ payload:
   - '+.dftoutiao.com'
   - '+.dftq.net'
   - '+.dftzj.com'
-  - '+.dfv5.net'
   - '+.dfxq.com'
   - '+.dfxwdc.com'
   - '+.dfyanyi.com'
@@ -19649,7 +19644,6 @@ payload:
   - '+.dongchedi.com'
   - '+.dongcheng120.com'
   - '+.dongchenghotels.com'
-  - '+.dongdalou.com'
   - '+.dongdao.net'
   - '+.dongdongaijia.com'
   - '+.dongdongwenda.com'
@@ -20471,6 +20465,7 @@ payload:
   - '+.dzdiy.com'
   - '+.dzdoll.com'
   - '+.dzdu.com'
+  - '+.dzdvip.com'
   - '+.dzfc.com'
   - '+.dzfxh.com'
   - '+.dzgoo.com'
@@ -22112,7 +22107,6 @@ payload:
   - '+.fangdr.com'
   - '+.fangfa.net'
   - '+.fangfaku.net'
-  - '+.fangfanwang.com'
   - '+.fanghaofang.com'
   - '+.fanghouguo.com'
   - '+.fanghuafu.com'
@@ -23625,7 +23619,6 @@ payload:
   - '+.fychinago.com'
   - '+.fydckl.com'
   - '+.fydeos.com'
-  - '+.fydisk.com'
   - '+.fydmodel.com'
   - '+.fydqw.com'
   - '+.fyeds0.com'
@@ -25415,7 +25408,6 @@ payload:
   - '+.gucun.info'
   - '+.gucunpark.net'
   - '+.gudage.cc'
-  - '+.gudaiba.com'
   - '+.gudaovision.com'
   - '+.gudi.cc'
   - '+.gudianhr.com'
@@ -27449,7 +27441,6 @@ payload:
   - '+.hglaser.com'
   - '+.hgmai.com'
   - '+.hgmhu.com'
-  - '+.hgmmav.com'
   - '+.hgnc.net'
   - '+.hgvip804.com'
   - '+.hgy413.com'
@@ -29355,6 +29346,7 @@ payload:
   - '+.hxnews.com'
   - '+.hxppw.com'
   - '+.hxqc.com'
+  - '+.hxqcjt.com'
   - '+.hxqnj.org'
   - '+.hxqwx.com'
   - '+.hxrc.com'
@@ -29813,7 +29805,6 @@ payload:
   - '+.icandata.com'
   - '+.icangshu111.com'
   - '+.icanzc.com'
-  - '+.icaoye.com'
   - '+.icardfinancial.com'
   - '+.icaredbd.com'
   - '+.icasiso.com'
@@ -30539,7 +30530,6 @@ payload:
   - '+.iloveyouxi.com'
   - '+.ilovezuan.com'
   - '+.iloxp.com'
-  - '+.ilqsh.com'
   - '+.ilsungf.com'
   - '+.ilucong.net'
   - '+.ilufan.com'
@@ -32540,7 +32530,6 @@ payload:
   - '+.jifenh.com'
   - '+.jifenzhong.com'
   - '+.jigao616.com'
-  - '+.jiguangcdn.com'
   - '+.jiguangdaili.com'
   - '+.jiguangdanci.com'
   - '+.jiguangkejigongsi.com'
@@ -34332,7 +34321,6 @@ payload:
   - '+.kaixin.com'
   - '+.kaixin00.com'
   - '+.kaixin001.com'
-  - '+.kaixin5.net'
   - '+.kaixinbao.com'
   - '+.kaixindou.net'
   - '+.kaixinguopiao.com'
@@ -34541,7 +34529,6 @@ payload:
   - '+.kaven.xyz'
   - '+.kawahdinosaur.com'
   - '+.kayege.info'
-  - '+.kayoudi.com'
   - '+.kaytrip.com'
   - '+.kaytune.com'
   - '+.kazakcnr.com'
@@ -37028,6 +37015,7 @@ payload:
   - '+.linkbux.com'
   - '+.linkchant.com'
   - '+.linkchic.com'
+  - '+.linkease.com'
   - '+.linked-f.com'
   - '+.linkedbyx.com'
   - '+.linkedhope.com'
@@ -37537,6 +37525,7 @@ payload:
   - '+.locren.com'
   - '+.loctek.com'
   - '+.locvps.com'
+  - '+.locvps.net'
   - '+.lodashjs.com'
   - '+.loesspie.com'
   - '+.loexu.com'
@@ -37794,7 +37783,6 @@ payload:
   - '+.lovehaimi.com'
   - '+.lovehhy.net'
   - '+.lovehifi.com'
-  - '+.loveineurope.com'
   - '+.loveinhere.com'
   - '+.lovejavascript.com'
   - '+.lovejia.win'
@@ -40329,7 +40317,6 @@ payload:
   - '+.momo9.me'
   - '+.momobako.com'
   - '+.momocdn.com'
-  - '+.momochufang.com'
   - '+.momooyo.com'
   - '+.momoshifu.com'
   - '+.momotn.com'
@@ -40527,7 +40514,6 @@ payload:
   - '+.mqcoffee.com'
   - '+.mqego.com'
   - '+.mquanquan.com'
-  - '+.mqwds.cc'
   - '+.mqxww.com'
   - '+.mr-ping.com'
   - '+.mr77.com'
@@ -41322,6 +41308,7 @@ payload:
   - '+.nbtarena.com'
   - '+.nbudp.com'
   - '+.nbunicom.com'
+  - '+.nbvps.net'
   - '+.nbwaf.net'
   - '+.nbwan.net'
   - '+.nbwb.net'
@@ -42892,7 +42879,6 @@ payload:
   - '+.oss.so'
   - '+.osschina.com'
   - '+.ossrs.net'
-  - '+.ossxp.com'
   - '+.ostools.net'
   - '+.osvlabs.com'
   - '+.oswdj.com'
@@ -43303,7 +43289,6 @@ payload:
   - '+.parawikis.com'
   - '+.parduscycle.com'
   - '+.parentshk.com'
-  - '+.paris-bride.com'
   - '+.paris-sengfu.net'
   - '+.parkbees.com'
   - '+.parkchina.net'
@@ -46247,7 +46232,6 @@ payload:
   - '+.rabbitpre.me'
   - '+.race604.com'
   - '+.racing-china.com'
-  - '+.racktom.com'
   - '+.radicalmail.net'
   - '+.radida.com'
   - '+.radio1964.com'
@@ -46638,7 +46622,6 @@ payload:
   - '+.rffanlab.com'
   - '+.rfhhzx.com'
   - '+.rfidcardcube.com'
-  - '+.rfidchina.org'
   - '+.rfidtech.cc'
   - '+.rfk.com'
   - '+.rfmwave.com'
@@ -47732,6 +47715,7 @@ payload:
   - '+.sdknext.com'
   - '+.sdksrv.com'
   - '+.sdlangkun.com'
+  - '+.sdlgzy.com'
   - '+.sdlinqu.com'
   - '+.sdlldj.com'
   - '+.sdlocw.com'
@@ -49013,7 +48997,6 @@ payload:
   - '+.shuaigay.nl'
   - '+.shuaigay6.com'
   - '+.shuaigeshe.com'
-  - '+.shuaigetupian.com'
   - '+.shuaihuajun.com'
   - '+.shuaiming.com'
   - '+.shuainiba.com'
@@ -49720,7 +49703,6 @@ payload:
   - '+.sks7.com'
   - '+.sksdwl.com'
   - '+.skusoft.com'
-  - '+.skwl.org'
   - '+.skwo.net'
   - '+.sky-deep.com'
   - '+.sky-fire.com'
@@ -49954,7 +49936,6 @@ payload:
   - '+.smzdmimg.com'
   - '+.smzdwan.com'
   - '+.smzwgk.com'
-  - '+.smzy.com'
   - '+.snai.edu'
   - '+.snail.com'
   - '+.snail007.com'
@@ -54548,7 +54529,6 @@ payload:
   - '+.ulikemusic.com'
   - '+.ulinix.com'
   - '+.ulink.cc'
-  - '+.uliuli.fun'
   - '+.ulpay.com'
   - '+.ultramanclub.com'
   - '+.ultramanol.com'
@@ -56653,7 +56633,6 @@ payload:
   - '+.weizhilink.com'
   - '+.weizoom.com'
   - '+.wejianzhan.com'
-  - '+.wejiazu.com'
   - '+.wejoydata.com'
   - '+.wekbo.com'
   - '+.wekuo.com'
@@ -56790,7 +56769,6 @@ payload:
   - '+.wenxiaoyou.com'
   - '+.wenxingfilter.com'
   - '+.wenxiu.com'
-  - '+.wenxiu998.com'
   - '+.wenxiushop.com'
   - '+.wenxue100.com'
   - '+.wenxuedu.com'
@@ -59055,7 +59033,6 @@ payload:
   - '+.xiandaohu.net'
   - '+.xianfae.com'
   - '+.xianfeng.net'
-  - '+.xianfengex.com'
   - '+.xianfengsg.com'
   - '+.xiang-le.com'
   - '+.xiang5.com'
@@ -61620,7 +61597,6 @@ payload:
   - '+.yeeyk.com'
   - '+.yeezhe.com'
   - '+.yef2.vip'
-  - '+.yefeiyexs.com'
   - '+.yefu365.com'
   - '+.yegame.com'
   - '+.yegenyou.com'
@@ -63876,7 +63852,6 @@ payload:
   - '+.ywart.com'
   - '+.ywbank.com'
   - '+.ywcbs.com'
-  - '+.ywcec.com'
   - '+.ywdier.com'
   - '+.ywditan315.com'
   - '+.ywec.net'
@@ -65977,6 +65952,7 @@ payload:
   - '+.zjolcdn.com'
   - '+.zjoldns.com'
   - '+.zjosm.com'
+  - '+.zjpark.com'
   - '+.zjpcedu.com'
   - '+.zjphrcb.com'
   - '+.zjpost.com'
@@ -66152,6 +66128,7 @@ payload:
   - '+.zmjiudian.com'
   - '+.zmlearn.com'
   - '+.zmmdn.com'
+  - '+.zmmoo.com'
   - '+.zmndjm.com'
   - '+.zmnds.com'
   - '+.zmnedu.com'
