--- a/directbak.yaml
+++ b/directbak.yaml
@@ -812,7 +812,6 @@ payload:
   - '+.100pd.cc'
   - '+.100pd.com'
   - '+.100ppi.com'
-  - '+.100rjrc.com'
   - '+.100run.com'
   - '+.100shop.com'
   - '+.100skin.com'
@@ -1764,6 +1763,7 @@ payload:
   - '+.187801.com'
   - '+.188.com'
   - '+.188158.com'
+  - '+.188187.xyz'
   - '+.1884933.com'
   - '+.18856.com'
   - '+.188628.com'
@@ -4670,7 +4670,6 @@ payload:
   - '+.52liaoshen.com'
   - '+.52life.cc'
   - '+.52linglong.com'
-  - '+.52linux.tech'
   - '+.52lion.com'
   - '+.52lishi.com'
   - '+.52lvyou.com'
@@ -10012,7 +10011,6 @@ payload:
   - '+.badu.com'
   - '+.badudns.cc'
   - '+.baertt.com'
-  - '+.bafafafa.com'
   - '+.bafangjuhe.com'
   - '+.bafangka.com'
   - '+.bafangwang.com'
@@ -12201,7 +12199,6 @@ payload:
   - '+.boxui.com'
   - '+.boxz.com'
   - '+.boy-toy.net'
-  - '+.boy1818.com'
   - '+.boy1904.com'
   - '+.boyaa.com'
   - '+.boyaceo.com'
@@ -17584,7 +17581,6 @@ payload:
   - '+.cxthhhhh.com'
   - '+.cxtuku.com'
   - '+.cxtxt.com'
-  - '+.cxvn.com'
   - '+.cxw.com'
   - '+.cxwl.com'
   - '+.cxwt103.com'
@@ -18426,7 +18422,6 @@ payload:
   - '+.dd373.com'
   - '+.dd4.com'
   - '+.dd6300.fun'
-  - '+.dd66778899.com'
   - '+.dd8828.com'
   - '+.ddbig.com'
   - '+.ddbiquge.cc'
@@ -18655,6 +18650,7 @@ payload:
   - '+.derzh.com'
   - '+.des8.com'
   - '+.desaysv.com'
+  - '+.deserts.io'
   - '+.deshui.wang'
   - '+.design006.com'
   - '+.designboard.cc'
@@ -21091,7 +21087,6 @@ payload:
   - '+.eggjs.org'
   - '+.eggscute.com'
   - '+.eggtt.com'
-  - '+.eghnmj.xyz'
   - '+.egonetworks.org'
   - '+.egongzheng.com'
   - '+.egoonet.com'
@@ -21361,6 +21356,7 @@ payload:
   - '+.enguo.com'
   - '+.engz.net'
   - '+.enicn.com'
+  - '+.enjoenjoenjo111.xyz'
   - '+.enjoy.link'
   - '+.enjoy1992.com'
   - '+.enjoy3c.com'
@@ -22662,7 +22658,6 @@ payload:
   - '+.feverassets.net'
   - '+.fevte.com'
   - '+.feydj.com'
-  - '+.ff14.org'
   - '+.ff14yuanxiang.com'
   - '+.ff54.ink'
   - '+.ff63.com'
@@ -23088,7 +23083,6 @@ payload:
   - '+.fonsoft.net'
   - '+.fonsview.com'
   - '+.font.im'
-  - '+.font168.com'
   - '+.font5.com'
   - '+.font6.com'
   - '+.fontke.com'
@@ -25533,7 +25527,6 @@ payload:
   - '+.guotv.com'
   - '+.guowaidiaocha.com'
   - '+.guowaitianqi.com'
-  - '+.guowenku.com'
   - '+.guoxingjun.com'
   - '+.guoxinqh.com'
   - '+.guoxue.com'
@@ -27712,7 +27705,6 @@ payload:
   - '+.hk-island.hk'
   - '+.hk-vstart.com'
   - '+.hk.uy'
-  - '+.hk5.cc'
   - '+.hk515.net'
   - '+.hkaco.com'
   - '+.hkance.com'
@@ -27881,7 +27873,6 @@ payload:
   - '+.hngoldcorp.com'
   - '+.hngou.com'
   - '+.hngwg.com'
-  - '+.hngwmt.com'
   - '+.hngyzx.org'
   - '+.hnh.cc'
   - '+.hnhaofang.com'
@@ -28053,7 +28044,6 @@ payload:
   - '+.homolo.net'
   - '+.homylogistics.com'
   - '+.honda-sundiro.com'
-  - '+.hondooy.com'
   - '+.hong-lawfirm.com'
   - '+.hong-shun.com'
   - '+.hong.ren'
@@ -37714,6 +37704,7 @@ payload:
   - '+.lophoctienganh.org'
   - '+.lopkino.com'
   - '+.lopopoo.com'
+  - '+.lopss.com'
   - '+.lorefree.com'
   - '+.losala.com'
   - '+.losking.com'
@@ -39473,7 +39464,6 @@ payload:
   - '+.mgsdk.com'
   - '+.mgslb.com'
   - '+.mgtv.com'
-  - '+.mgtvzy2.com'
   - '+.mgw999.com'
   - '+.mgwxw.com'
   - '+.mgwyx.com'
@@ -40300,6 +40290,7 @@ payload:
   - '+.momoshifu.com'
   - '+.momotn.com'
   - '+.momoyoyo.com'
+  - '+.momself.club'
   - '+.momzs.com'
   - '+.moneydai.com'
   - '+.moneydata.hk'
@@ -40552,7 +40543,6 @@ payload:
   - '+.mslzz.com'
   - '+.msmartlife.com'
   - '+.msmbjp.com'
-  - '+.msoso.com'
   - '+.mspharm.com'
   - '+.mspring.org'
   - '+.msrtvu.net'
@@ -42166,7 +42156,6 @@ payload:
   - '+.nuoder.com'
   - '+.nuoha.vip'
   - '+.nuoji.com'
-  - '+.nuojiugo.com'
   - '+.nuokui.com'
   - '+.nuomi.com'
   - '+.nuomicikoi.com'
@@ -42429,7 +42418,6 @@ payload:
   - '+.oiaqye7985.com'
   - '+.oicat.com'
   - '+.oicq88.com'
-  - '+.oicqzone.com'
   - '+.oicto.com'
   - '+.oidchina.org'
   - '+.oigps.com'
@@ -43449,7 +43437,6 @@ payload:
   - '+.pe898.com'
   - '+.pea3nut.com'
   - '+.pea3nut.info'
-  - '+.pea3nut.org'
   - '+.peace-read.com'
   - '+.peaceticket.com'
   - '+.peak-labs.com'
@@ -44316,7 +44303,6 @@ payload:
   - '+.printhome.com'
   - '+.printlake.com'
   - '+.prior24.com'
-  - '+.prismcdn.com'
   - '+.privateadx.com'
   - '+.privatess.win'
   - '+.privspace.net'
@@ -45152,6 +45138,7 @@ payload:
   - '+.qincaigame.com'
   - '+.qinchacha.com'
   - '+.qinchu123.com'
+  - '+.qincj.me'
   - '+.qinco.net'
   - '+.qineasy.com'
   - '+.qinfan.xyz'
@@ -46856,7 +46843,6 @@ payload:
   - '+.rosecmsc.com'
   - '+.rosedata.com'
   - '+.rosefinchfund.com'
-  - '+.roshanca.com'
   - '+.rosi.me'
   - '+.rosinson.com'
   - '+.rossoarts.com'
@@ -52063,7 +52049,6 @@ payload:
   - '+.taxwen.com'
   - '+.tayohya.com'
   - '+.tazhe.com'
-  - '+.taznsb.com'
   - '+.tb.am'
   - '+.tb51.net'
   - '+.tb58.net'
@@ -52396,7 +52381,6 @@ payload:
   - '+.teuhui.com'
   - '+.tex68.com'
   - '+.texclo.net'
-  - '+.text.wiki'
   - '+.textin.com'
   - '+.teyop.com'
   - '+.tezhengma.com'
@@ -57497,7 +57481,6 @@ payload:
   - '+.wldsb.com'
   - '+.wleye.com'
   - '+.wlhcd.com'
-  - '+.wlim.pro'
   - '+.wlinfor.com'
   - '+.wljy8.com'
   - '+.wljyyjy.com'
@@ -57509,7 +57492,6 @@ payload:
   - '+.wlnh.net'
   - '+.wlphp.com'
   - '+.wlqtpolytheatre.com'
-  - '+.wlread.com'
   - '+.wlrjy.com'
   - '+.wlsgjslgy.com'
   - '+.wlshw.com'
@@ -61625,7 +61607,6 @@ payload:
   - '+.yeshj.com'
   - '+.yeshu.com'
   - '+.yesidos.com'
-  - '+.yesiness.com'
   - '+.yeskn.com'
   - '+.yesky.com'
   - '+.yeslib.com'
